# poc-agent-log-text-analyzer

./: .env.example  .flake8  .gitignore  Dockerfile.test  Makefile  README.md  TASKS.md  pyproject.toml
data/specs/: sample_users_api.yaml
docs/: phase2-test-scenarios.md
src/common/models/: __init__.py  api_call.py  api_spec.py  document.py
src/legacy/agents/: __init__.py  api_call_generator.py  base.py  llm_log_analyzer.py  log_analyzer.py  workflow.py
src/legacy/embeddings/: __init__.py  base.py  ollama_embedder.py  openai_embedder.py
src/legacy/llm/: __init__.py  base.py  ollama_client.py  prompt_template.py
src/legacy/parsers/: __init__.py  base.py  extractor.py  http_parser.py  json_parser.py  text_parser.py
src/legacy/pipeline/: __init__.py  spec_indexer.py
src/legacy/spec_loader/: __init__.py  converter.py  loader.py
src/legacy/vector_store/: __init__.py  chroma_store.py
tests/: test_phase1_setup.py
tests/legacy/: test_phase3_imports.py  test_phase3_ollama.py  test_phase3_simple.py  test_phase3_unit.py  test_phase4_parsers.py  test_phase5_agents.py  test_phase5_llm.py  test_spec_loader.py  test_spec_loader_simple.py
